Getting weather from end point

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -40,4 +40,5 @@ dependencies
     wearApp project(':wear')
 
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 }
