--- a/common/build.gradle
+++ b/common/build.gradle
@@ -18,14 +18,33 @@ android
         versionName "0.0.1"
     }
 
+    signingConfigs
+    {
+        release
+        {
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+            storePassword RELEASE_STORE_PASSWORD
+            storeFile file(RELEASE_STORE_FILE)
+        }
+    }
+
     compileOptions
     {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    buildTypes
+    {
+        release
+        {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 dependencies
 {
-    compile 'com.google.android.gms:play-services-wearable:9.4.0'
+    compile 'com.google.android.gms:play-services-wearable:9.6.1'
 }
